Reproduce https://github.com/quarkusio/quarkus/issues/17145

--- a/rest-client-reactive-quickstart/src/main/resources/application.properties
+++ b/rest-client-reactive-quickstart/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-country-api/mp-rest/url=https://restcountries.eu/rest
+country-api/mp-rest/url=http://localhost:8080/dummy
+
+#quarkus.package.fernflower.enabled=true
