--- a/rest-client-reactive-quickstart/pom.xml
+++ b/rest-client-reactive-quickstart/pom.xml
@@ -50,6 +50,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-arc</artifactId>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.jetbrains.kotlinx</groupId>-->
+<!--      <artifactId>kotlinx-coroutines-jdk8</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
